--- a/src/components.css
+++ b/src/components.css
@@ -18,6 +18,8 @@ details,
   border-block-end: var(--border-block-end-width) var(--border-block-end-style) var(--graphical-fg);
   border-inline-start: var(--border-inline-start-width) var(--border-inline-start-style) var(--graphical-fg);
   border-inline-end: var(--border-inline-end-width) var(--border-inline-end-style) var(--graphical-fg);
+
+  scrollbar-color: var(--accent) transparent;
 }
 
 .titlebar {
